data/all_generated_tests/raw_wast_tests/br_UnreachableCodeExecution_380.wast
;; Sure, here are the descriptions for 10 unique differential tests focused on Unreachable Code Execution for testing the br instruction:  1. **Test 1: Unreachable After Valid Forward Branch**    - Create a `block` with a `br` instruction targeting the block label. Follow the block with an `unreachable` instruction.    - Checks if the branch correctly skips over the unreachable instruction.

(assert_invalid
  (module
    (func
      (block
        (br 0)
      )
      unreachable
    )
  )
  "unreachable executed"
)